nefcloud/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: >-
      oauth2-proxy-google@kubernetescrd
spec:
  rules:
    - host: headlamp.nefcloud.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp-auth
                port:
                  number: 80
